# hiphop-php

./: CMakeLists.txt
CMake/: HPHPSetup.cmake
src/compiler/analysis/: analysis_result.cpp  class_scope.cpp  dependency_graph.cpp
src/compiler/expression/: class_constant_expression.cpp  constant_expression.cpp  simple_function_call.cpp
src/compiler/statement/: class_variable.cpp
src/hphp/: main.cpp
src/runtime/base/: builtin_functions.cpp  builtin_functions.h  execution_context.cpp  hphp_system.cpp  hphp_system.h  program_functions.cpp  runtime_option.cpp  runtime_option.h
src/runtime/base/array/: array_util.cpp
src/runtime/base/file/: plain_file.cpp  socket.cpp
src/runtime/base/server/: admin_request_handler.cpp  http_server.cpp  http_server.h  request_uri.cpp
src/runtime/eval/ast/: object_method_expression.cpp  object_property_expression.cpp  this_expression.cpp
src/runtime/eval/runtime/: variable_environment.cpp  variable_environment.h
src/runtime/ext/: ext_session.cpp  ext_simplexml.cpp  ext_simplexml.h  pdo_mysql.cpp
src/system/globals/: constants.php
src/util/: logger.cpp  logger.h  util.cpp
